--- a/css/style.css
+++ b/css/style.css
@@ -59,10 +59,8 @@ a:focus {
 }
 
 .header .brand img {
-    width: 100%;
-    max-width: 150px;
-    height: 100%;
-    max-height: 100px;
+    width: 200px;
+    height: 90px;
 }
 
 .header .topbar {
@@ -299,6 +297,7 @@ a:focus {
 .hero img {
     max-width: 100%;
     max-height: 600px;
+    border-radius: 30px 0 0 30px;
 }
 
 @media (max-width: 767.98px) {
