--- a/css/style.css
+++ b/css/style.css
@@ -267,7 +267,7 @@ a:focus {
     font-weight: 800;
 }
 
-.hero h2 span {
+.hero h4 span {
     color: #4F84C4;
 }
 
@@ -306,7 +306,6 @@ a:focus {
     }
 }
 
-
 /*******************************/
 /******* Section Header ********/
 /*******************************/
@@ -343,6 +342,22 @@ a:focus {
     font-weight: 400;
     line-height: 24px;
 }
+
+/*******************************/
+/******* Properties Section ********/
+/*******************************/
+.properties {
+    position: relative;
+    width: 100%;
+    padding: 45px 0 15px 0;
+}
+
+@media (min-width: 768px) {
+    .properties {
+        padding: 45px 60px 15px 60px;
+    }
+}
+
 
 
 /*******************************/
