--- a/css/style.css
+++ b/css/style.css
@@ -59,8 +59,8 @@ a:focus {
 }
 
 .header .brand img {
-    width: 100px;
-    height: 100px;
+    width: 300px;
+    height: 80px;
 }
 
 .header .topbar {
@@ -254,7 +254,26 @@ a:focus {
 /*******************************/
 /*********** Hero CSS **********/
 /*******************************/
-.hero {
+.carousel {
+    margin-bottom: 4rem;
+  }
+  .carousel-caption {
+    bottom: 3rem;
+    z-index: 10;
+  }
+  .carousel-item {
+    height: 36rem;
+    background-color: #777;
+  }
+  .carousel-item > img {
+    filter: brightness(40%);
+    position: absolute;
+    top: 0;
+    left: 0;
+    min-width: 100%;
+    max-height: 36rem;
+  }
+/* .hero {
     position: relative;
     width: 100%;
     padding: 45px 0;
@@ -264,7 +283,7 @@ a:focus {
     .hero {
         padding: 45px 60px;
     }
-}
+} */
 
 .hero h2 {
     margin: 0;
@@ -299,11 +318,11 @@ a:focus {
     background: linear-gradient(#00539C, #4F84C4);
 }
 
-.hero img {
+/* .hero img {
     max-width: 100%;
     max-height: 600px;
     border-radius: 30px 0 0 30px;
-}
+} */
 
 @media (max-width: 767.98px) {
     .hero img {
