--- a/css/style.css
+++ b/css/style.css
@@ -256,33 +256,27 @@ a:focus {
 /*******************************/
 .carousel {
     margin-bottom: 4rem;
-  }
-  .carousel-caption {
+}
+.carousel-caption {
     bottom: 3rem;
     z-index: 10;
-  }
-  .carousel-item {
-    height: 36rem;
+}
+.carousel-item {
+    height: 34rem;
     background-color: #777;
-  }
-  .carousel-item > img {
+}
+.carousel-item > img {
     filter: brightness(40%);
     position: absolute;
     top: 0;
     left: 0;
     min-width: 100%;
-    max-height: 36rem;
-  }
+    height: 34rem;
+}
 /* .hero {
     position: relative;
     width: 100%;
     padding: 45px 0;
-}
-
-@media (min-width: 768px) {
-    .hero {
-        padding: 45px 60px;
-    }
 } */
 
 .hero h2 {
@@ -316,6 +310,15 @@ a:focus {
 
 .hero a.btn:hover {
     background: linear-gradient(#00539C, #4F84C4);
+}
+
+@media (max-width: 768px) {
+    .hero h2 {
+        font-size: 35px;
+    }
+    .hero p {
+        font-size: 16px;
+    }
 }
 
 /* .hero img {
